# LangChatV2

LangChat-master/: manage.py  pyproject.toml
LangChat-master/chat_app/: consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
LangChat-master/chat_app/migrations/: 0001_initial.py  0002_tempuser_room_name.py  0003_chatroom_alter_tempuser_room_name.py  0004_chatroom_user1_chatroom_user2_and_more.py
LangChat-master/chat_app/static/chat_app/: bootstrap.min.css  styles.css
LangChat-master/chat_app/templates/chat_app/: chat.html  index.html  layout.html
LangChat-master/lang_chat/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/chat/: package.json
frontend/chat/src/: App.js
frontend/chat/src/components/: Header.js
