[tool.poetry]
name = "lang_chat"
version = "0.1.0"
description = "language chat project"
authors = ["bcvance <81263222+bcvance@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.6"
channels = "^3.0.5"
mysqlclient = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
